// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> Center story renders snapshot 1`] = `
<section
  class="section section--center"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-inner"
        >
          <div
            class="section__overline"
          >
            <div
              class="layout-linelength-container text text--overline text-passage text-passage--overline"
            >
              Overline above title
            </div>
          </div>
          <h2
            class="heading heading--size-h2 section__title"
          >
            Section Title
          </h2>
          <div
            class="section__description"
          >
            <p
              class="text text--sm section__text"
            >
              This is a description of what the section is
            </p>
          </div>
        </div>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;

exports[`<Section /> Default story renders snapshot 1`] = `
<section
  class="section"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-inner"
        >
          <h2
            class="heading heading--size-h2 section__title"
          >
            Section Title
          </h2>
        </div>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;

exports[`<Section /> WithDescription story renders snapshot 1`] = `
<section
  class="section"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-inner"
        >
          <h2
            class="heading heading--size-h2 section__title"
          >
            Section Title
          </h2>
          <div
            class="section__description"
          >
            <p
              class="text text--sm section__text"
            >
              This is a description of what the section is
            </p>
          </div>
        </div>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;

exports[`<Section /> WithOverline story renders snapshot 1`] = `
<section
  class="section"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-inner"
        >
          <div
            class="section__overline"
          >
            <div
              class="layout-linelength-container text text--overline text-passage text-passage--overline"
            >
              Overline above title
            </div>
          </div>
          <h2
            class="heading heading--size-h2 section__title"
          >
            Section Title
          </h2>
        </div>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;

exports[`<Section /> WithRight story renders snapshot 1`] = `
<section
  class="section"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-inner"
        >
          <h2
            class="heading heading--size-h2 section__title"
          >
            Section Title
          </h2>
        </div>
      </div>
      <div
        class="section__right"
      >
        <button
          class="clickable-style clickable-style--md clickable-style--primary clickable-style--brand button button--primary"
          data-bootstrap-override="clickable-style-primary"
          type="button"
        >
          Button
        </button>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;

exports[`<Section /> WithTitleAfter story renders snapshot 1`] = `
<section
  class="section"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-inner"
        >
          <h2
            class="heading heading--size-h2 section__title"
          >
            Section Title
            <span
              class="section__title-after"
            >
              <svg
                class="icon"
                fill="currentColor"
                height="1.375rem"
                role="img"
                style="--icon-size: 1.375rem;"
                width="1.375rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="1"
                >
                  help
                </title>
                <use
                  xlink:href="test-file-stub#help"
                />
              </svg>
            </span>
          </h2>
        </div>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;

exports[`<Section /> WithTitleBefore story renders snapshot 1`] = `
<section
  class="section"
>
  <div
    class="section__inner"
  >
    <header
      class="section__header"
    >
      <div
        class="section__header-inner"
      >
        <div
          class="section__title-before"
        >
          <svg
            class="icon"
            fill="currentColor"
            height="1.375rem"
            role="img"
            style="--icon-size: 1.375rem;"
            width="1.375rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="2"
            >
              help
            </title>
            <use
              xlink:href="test-file-stub#help"
            />
          </svg>
        </div>
        <div
          class="section__title-inner"
        >
          <h4
            class="heading heading--size-h4 section__title"
          >
            Section Title
          </h4>
        </div>
      </div>
    </header>
    <div
      class="section__body"
    >
      This is the section body, where you can put any content or include other components.
    </div>
  </div>
</section>
`;
